# llm-wiki

./: .env.example  .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
examples/: custom_provider_example.py
llmwiki/: __init__.py  auth.py  backlinks.py  cli.py  config.py  git_utils.py  ingest.py  lint.py  llm_client.py  query.py  search.py  utils.py  vector_search.py  version_history.py
llmwiki.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
llmwiki/parsers/: __init__.py  audio.py  docx.py  markdown.py  pdf.py  web.py
tests/: test_auth.py  test_backlinks.py  test_context.py  test_custom_provider.py  test_lint.py  test_query.py  test_search.py  test_utils.py  test_vector_search.py  test_version_history.py
wiki/: index.md  log.md
